<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AudioPlayer</string>
    <string name="tab1">Songs</string>
    <string name="tab2">Artists</string>
    <string name="tab3">Playlists</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_playlist">Add Playlist</string>
    <string name="close_app">Close App</string>
    <string name="title_activity_artist_songs">ArtistSongsActivity</string>
    <string name="title_activity_playlist_contents">PlaylistContentsActivity</string>
    <string name="title_activity_playlist_contents_delete">PlaylistContentsDeleteActivity</string>
    <string name="add_songs">Add Songs</string>
    <string name="delete_songs">Delete Songs</string>
    <string name="remove_playlist">Remove Playlist</string>
    <string name="edit_title">Edit Title</string>
    <string name="overflow"></string>
    <string name="edit_title_hint">Playlist Title</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="new_playlist">Create a new playlist</string>
    <string name="delete_playlist">Deleting this Playlist</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="selected">selected</string>
    <string name="select_all">Select all</string>
    <string name="title_activity_playlist_contents_add">PlaylistContentsAddActivity</string>
    <string name="add">Add</string>
    <string name="description_play_button">Button to pause and play songs</string>
    <string name="description_previous_button">Button to go to previous song</string>
    <string name="description_next_button">Button to go to next song</string>
    <string name="notification_title_playing">AudioPlayer is playing:</string>
    <string name="notification_title_paused">AudioPlayer is paused</string>
    <string name="playlist_exists">This name already exists!</string>
    <string name="delete_confirmation_message">Are you sure you want to delete:</string>

</resources>
