<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/player"
    android:layout_width="fill_parent"
    android:layout_height="60dp"
    android:layout_alignParentBottom="true"
    android:background="#151515"
    android:paddingLeft="5dp"
    android:paddingRight="5dp" >

    <ImageButton
        android:id="@+id/previous_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/play_button"
        android:layout_toStartOf="@+id/play_button"
        android:contentDescription="@string/description_previous_button"
        android:onClick="prevButton"
        android:src="@drawable/ic_action_previous" />

    <TextView
        android:id="@+id/player_song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@id/previous_button"
        android:layout_toStartOf="@id/previous_button"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="1"
        android:paddingTop="3dp"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/player_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/player_song"
        android:layout_toLeftOf="@id/previous_button"
        android:layout_toStartOf="@id/previous_button"
        android:ellipsize="end"
        android:maxLines="2"
        android:textStyle="italic" />

    <ImageButton
        android:id="@id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/next_button"
        android:layout_toStartOf="@+id/next_button"
        android:contentDescription="@string/description_play_button"
        android:onClick="playButton"
        android:src="@drawable/ic_action_play" />

    <ImageButton
        android:id="@id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/description_next_button"
        android:onClick="nextButton"
        android:src="@drawable/ic_action_next" />

</RelativeLayout>